refactor: rename crm to business
